# Rubik-s-Cube-Robot

./: .gitignore  buildall.sh
Magic-cube-robot/: .gitignore
Magic-cube-robot/transform/: CMakeLists.txt  configure.sh
Magic-cube-robot/transform/src/: tochar.cpp
configs/: vision_pretreat.ini
min2phase-dev-min/: demo.java  demo2.java
simulation/: CMakeLists.txt
simulation/include/: Robot.h  transform.h
simulation/src/: Robot.cpp  main.cpp  search_opt.cpp  tochar.cpp  transform.cpp
strategy/: acquireImage.py  demo.py
transform/: CMakeLists.txt  README.md
transform/include/: Cube.h  Robot.h  transform.h
transform/src/: Cube.cpp  Robot.cpp  action_optimization.cpp  main.cpp  search.cpp  search_better.cpp  search_opt.cpp  tochar.cpp  transform.cpp
vision/: ClassifierVersion.py  ClusterVersion.py  KmeansVersion.py  NNVersion.py  Pretreat.py  SvmVersion.py  requirements.txt  set_cam_params.py  set_pretreat_params.py  t_ShowScalars.py
vision/ClfTrain/: GetData.py  Predict.py  Train.py  now.model
vision/ClfTrain/model/: base_six_color.model  svm_linear_score1.0_magic_6.model  svm_linear_score1.0_magic_black.model  svm_linear_score1.0_magic_white.model
vision/SvmTrain/model/: linear_score1.0_gts.model
vision/SvmVersion/: GetData.py  SvmPredict.py  SvmTrain.py
